# git-substitute

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  cli.go  git-substitute.cabal  git.go  main.go  pattern.go  replace_pattern.go  stack.yaml  substitute.go  substitute_test.go  syntax.go
Godeps/: Godeps.json
test/: basic_patterns.bats  common.bats  errors.bats  extended_patterns.bats  fixed_string_patterns.bats  helpers.bash  isolation.bash  paths.bats  patterns.bats  perl_patterns.bats
