name:                git-substitute
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/nicknovitski/git-substitute#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Novitski
maintainer:          github@nicknovitski.com
copyright:           2015 Nick Novitski
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable git-substitute
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , git-substitute
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nicknovitski/git-substitute
